fixes cart bugs and scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
 
 @layer base {
   body {
@@ -10,6 +21,7 @@
 }
 
 @font-face {
-  font-family: 'sedan';
-  src: local('SedanSC-Regular'), url('./assets/fonts/SedanSC-Regular.ttf') format('truetype');
+  font-family: "sedan";
+  src: local("SedanSC-Regular"),
+    url("./assets/fonts/SedanSC-Regular.ttf") format("truetype");
 }
